[tool.poetry]
name = "auto-tagger"
version = "0.1.0"
description = ""
authors = ["notdodo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^2.6.1"
semver = "^3.0.4"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = { extras = ["faster-cache"], version = "^1.15.0" }
isort = "^6.0.1"
pydantic = "^2.11.1"
pylint = "^3.3.6"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
