[tool.poetry]
name = "auto-tagger"
version = "0.1.0"
description = "A GitHub Action to automatically bump and/or create tags upon push to the default branch, using SemVer formatting."
authors = ["notdodo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^2.6.1"
semver = "^3.0.4"

[tool.poetry.group.dev.dependencies]
mypy = { extras = ["faster-cache"], version = "^1.16.1" }
pydantic = "^2.11.7"
pylint = "^3.3.7"
ruff = "^0.12.0"

[tool.ruff]
output-format = "github"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = [
    "D2",
    "D4",
    "ANN",
    "COM812",
    "D107",
    "ISC001",
    "ERA001",
    "N803",
    "T201",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
namespace_packages = true

[tool.pylint."MESSAGES CONTROL"]
persistent = "no"
disable = ["fixme", "line-too-long"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
